# EMO-LLM

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: calm_safe.yaml  empathetic.yaml  encouraging.yaml  rational.yaml
data/eval/: style_comparison.jsonl  test_inputs.json  test_inputs_30.json
data/train/: all_styles.jsonl  calm_safe.jsonl  empathetic.jsonl  encouraging.jsonl  rational.jsonl
data/train_v2/: all_styles.jsonl  calm_safe.jsonl  empathetic.jsonl  encouraging.jsonl  rational.jsonl
demo/: app.py
doc/: report.md
log/: compare_baseline_vs_lora.json  eval_metrics.json  eval_report.txt  experiment_final_results.json  experiment_v3_results.json  metrics.jsonl  metrics_calm_safe_021403.json  metrics_empathetic_021403.json  metrics_encouraging_021402.json  metrics_rational_021403.json  metrics_v2_calm_safe_042104.json  metrics_v2_empathetic_042104.json  metrics_v2_encouraging_042104.json  metrics_v2_rational_042104.json  reccon_results.json  spr_vr_metrics.json  spr_vr_results.json  validate_v2_comparison.json  validation_log.txt  validation_results.json
notebooks/: demo.ipynb
scripts/: convert_esconv.py  evaluate.py  evaluate_metrics.py  experiment_final.py  experiment_v3.py  explore_compare.py  generate.sh  generate_styled_data.py  reccon_experiment.py  run_demo.sh  run_experiments.py  spr_vr_experiment.py  train_all.sh  train_parallel.sh  train_style.py  train_v3_worker.py  validate_interpolation.py  validate_v2.py
src/: __init__.py  generate.py  interpolate.py  train_lora.py  utils.py
